# dash-asset-allocator

./: LICENSE  README.md  app.py  hello.py  pyproject.toml
assets/: historic.csv  mycss.css
